--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -152,7 +152,7 @@
 	"Ask": "提问",
 	"Ask a question": "提问",
 	"Assistant": "助手",
-	"Async Embedding Processing": "",
+	"Async Embedding Processing": "异步嵌入处理",
 	"Attach File From Knowledge": "引用知识库中的文件",
 	"Attach Knowledge": "引用知识库",
 	"Attach Notes": "引用笔记",
@@ -558,7 +558,7 @@
 	"Enter Datalab Marker API Base URL": "输入 Datalab Marker 接口地址",
 	"Enter Datalab Marker API Key": "输入 Datalab Marker 接口密钥",
 	"Enter description": "输入简介描述",
-	"Enter Docling API Key": "",
+	"Enter Docling API Key": "输入 Docling 接口密钥",
 	"Enter Docling Server URL": "输入 Docling 服务器接口地址",
 	"Enter Document Intelligence Endpoint": "输入 Document Intelligence 端点",
 	"Enter Document Intelligence Key": "输入 Document Intelligence 密钥",
@@ -573,7 +573,7 @@
 	"Enter Firecrawl API Base URL": "输入 Firecrawl 接口地址",
 	"Enter Firecrawl API Key": "输入 Firecrawl 接口密钥",
 	"Enter folder name": "输入分组名称",
-	"Enter function name filter list (e.g. func1, !func2)": "",
+	"Enter function name filter list (e.g. func1, !func2)": "输入函数名称过滤列表（例如：func1, !func2）",
 	"Enter Github Raw URL": "输入 Github Raw 链接",
 	"Enter Google PSE API Key": "输入 Google PSE 接口密钥",
 	"Enter Google PSE Engine Id": "输入 Google PSE 引擎 ID",
@@ -785,7 +785,7 @@
 	"Function is now globally disabled": "函数全局已禁用",
 	"Function is now globally enabled": "函数全局已启用",
 	"Function Name": "函数名称",
-	"Function Name Filter List": "",
+	"Function Name Filter List": "函数名称过滤列表",
 	"Function updated successfully": "函数更新成功",
 	"Functions": "函数",
 	"Functions allow arbitrary code execution.": "注意：函数有权执行任意代码",
@@ -1350,7 +1350,7 @@
 	"Run": "运行",
 	"Running": "运行中",
 	"Running...": "运行中...",
-	"Runs embedding tasks concurrently to speed up processing. Turn off if rate limits become an issue.": "",
+	"Runs embedding tasks concurrently to speed up processing. Turn off if rate limits become an issue.": "并行运行嵌入任务以加快处理速度。如果遇到限速问题，请关闭此选项。",
 	"Save": "保存",
 	"Save & Create": "保存并创建",
 	"Save & Update": "保存并更新",
