--- a/src/lib/i18n/locales/zh-TW/translation.json
+++ b/src/lib/i18n/locales/zh-TW/translation.json
@@ -152,7 +152,7 @@
 	"Ask": "提問",
 	"Ask a question": "提出問題",
 	"Assistant": "助理",
-	"Async Embedding Processing": "",
+	"Async Embedding Processing": "異步嵌入處理",
 	"Attach File From Knowledge": "從知識庫附加檔案",
 	"Attach Knowledge": "附加知識庫",
 	"Attach Notes": "附加筆記",
@@ -558,7 +558,7 @@
 	"Enter Datalab Marker API Base URL": "輸入 Datalab Marker API 請求 URL",
 	"Enter Datalab Marker API Key": "輸入 Datalab Marker API 金鑰",
 	"Enter description": "輸入描述",
-	"Enter Docling API Key": "",
+	"Enter Docling API Key": "輸入 Docling API 金鑰",
 	"Enter Docling Server URL": "請輸入 Docling 伺服器 URL",
 	"Enter Document Intelligence Endpoint": "輸入 Document Intelligence 端點",
 	"Enter Document Intelligence Key": "輸入 Document Intelligence 金鑰",
@@ -573,7 +573,7 @@
 	"Enter Firecrawl API Base URL": "輸入 Firecrawl API 基底 URL",
 	"Enter Firecrawl API Key": "輸入 Firecrawl API 金鑰",
 	"Enter folder name": "輸入分組名稱",
-	"Enter function name filter list (e.g. func1, !func2)": "",
+	"Enter function name filter list (e.g. func1, !func2)": "輸入函式名稱篩選列表（例如：func1, !func2）",
 	"Enter Github Raw URL": "輸入 GitHub Raw URL",
 	"Enter Google PSE API Key": "輸入 Google PSE API 金鑰",
 	"Enter Google PSE Engine Id": "輸入 Google PSE 引擎 ID",
@@ -785,7 +785,7 @@
 	"Function is now globally disabled": "已全域停用函式",
 	"Function is now globally enabled": "已全域啟用函式",
 	"Function Name": "函式名稱",
-	"Function Name Filter List": "",
+	"Function Name Filter List": "函式名稱篩選列表",
 	"Function updated successfully": "成功更新函式",
 	"Functions": "函式",
 	"Functions allow arbitrary code execution.": "函式允許執行任意程式碼。",
@@ -1350,7 +1350,7 @@
 	"Run": "執行",
 	"Running": "正在執行",
 	"Running...": "正在執行...",
-	"Runs embedding tasks concurrently to speed up processing. Turn off if rate limits become an issue.": "",
+	"Runs embedding tasks concurrently to speed up processing. Turn off if rate limits become an issue.": "同時執行嵌入任務以加快處理速度。如果遇到速率限制問題，請關閉此功能。",
 	"Save": "儲存",
 	"Save & Create": "儲存並建立",
 	"Save & Update": "儲存並更新",
