--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -223,6 +223,7 @@
 	"Channel deleted successfully": "删除频道成功",
 	"Channel Name": "频道名称",
 	"Channel name cannot be empty.": "频道名称不能为空。",
+	"Channel Type": "",
 	"Channel updated successfully": "更新频道成功",
 	"Channels": "频道",
 	"Character": "字符",
@@ -429,6 +430,7 @@
 	"Direct": "直接",
 	"Direct Connections": "直接连接",
 	"Direct Connections allow users to connect to their own OpenAI compatible API endpoints.": "直接连接允许用户连接自有的 OpenAI 兼容的接口",
+	"Direct Message": "",
 	"Direct Tool Servers": "直接连接工具服务器",
 	"Directory selection was cancelled": "已取消选择目录",
 	"Disable Code Interpreter": "禁用代码解释器",
@@ -1246,6 +1248,7 @@
 	"Please select a model.": "请选择模型。",
 	"Please select a reason": "请选择原因",
 	"Please select a valid JSON file": "请选择合法的 JSON 文件",
+	"Please select at least one user for Direct Message channel.": "",
 	"Please wait until all files are uploaded.": "请等待所有文件上传完毕。",
 	"Port": "端口",
 	"Positive attitude": "态度积极",
@@ -1697,6 +1700,7 @@
 	"User menu": "用户菜单",
 	"User Webhooks": "用户 Webhook",
 	"Username": "用户名",
+	"users": "",
 	"Users": "用户",
 	"Uses DefaultAzureCredential to authenticate": "使用 DefaultAzureCredential 进行身份验证",
 	"Uses OAuth 2.1 Dynamic Client Registration": "使用 OAuth 2.1 的动态客户端注册机制",
