--- a/src/lib/i18n/locales/zh-TW/translation.json
+++ b/src/lib/i18n/locales/zh-TW/translation.json
@@ -18,11 +18,15 @@
 	"{{COUNT}} words": "{{COUNT}} 個詞",
 	"{{LOCALIZED_DATE}} at {{LOCALIZED_TIME}}": "{{LOCALIZED_DATE}} {{LOCALIZED_TIME}}",
 	"{{model}} download has been canceled": "已取消模型 {{model}} 的下載",
+	"{{NAMES}} reacted with {{REACTION}}": "{{NAMES}} 給了 {{REACTION}}",
 	"{{user}}'s Chats": "{{user}} 的對話",
 	"{{webUIName}} Backend Required": "需要提供 {{webUIName}} 後端",
 	"*Prompt node ID(s) are required for image generation": "* 圖片生成需要提示詞節點 ID",
 	"1 Source": "1 個來源",
+	"A collaboration channel where people join as members": "成員可加入的協作頻道",
+	"A discussion channel where access is controlled by groups and permissions": "由權限組控制的討論頻道",
 	"A new version (v{{LATEST_VERSION}}) is now available.": "新版本 (v{{LATEST_VERSION}}) 已釋出。",
+	"A private conversation between you and selected users": "您與選定使用者之間的私人對話",
 	"A task model is used when performing tasks such as generating titles for chats and web search queries": "執行「產生對話標題」和「網頁搜尋查詢生成」等任務時使用的任務模型",
 	"a user": "使用者",
 	"About": "關於",
@@ -53,7 +57,8 @@
 	"Add Custom Prompt": "新增自訂提示詞",
 	"Add Details": "豐富細節",
 	"Add Files": "新增檔案",
-	"Add Group": "新增群組",
+	"Add Member": "新增成員",
+	"Add Members": "新增成員",
 	"Add Memory": "新增記憶",
 	"Add Model": "新增模型",
 	"Add Reaction": "新增動作",
@@ -223,7 +228,7 @@
 	"Channel deleted successfully": "成功刪除頻道",
 	"Channel Name": "頻道名稱",
 	"Channel name cannot be empty.": "頻道名稱不能為空。",
-	"Channel Type": "",
+	"Channel Type": "頻道類型",
 	"Channel updated successfully": "成功更新頻道",
 	"Channels": "頻道",
 	"Character": "字元",
@@ -288,6 +293,7 @@
 	"Code Interpreter": "程式碼直譯器",
 	"Code Interpreter Engine": "程式碼直譯器引擎",
 	"Code Interpreter Prompt Template": "程式碼直譯器提示詞範本",
+	"Collaboration channel where people join as members": "成員可加入的協作頻道",
 	"Collapse": "摺疊",
 	"Collection": "集合",
 	"Color": "顏色",
@@ -430,7 +436,7 @@
 	"Direct": "直接",
 	"Direct Connections": "直接連線",
 	"Direct Connections allow users to connect to their own OpenAI compatible API endpoints.": "直接連線允許使用者連線至自有或其他與 OpenAI API 相容的端點。",
-	"Direct Message": "",
+	"Direct Message": "直接訊息",
 	"Direct Tool Servers": "直連工具伺服器",
 	"Directory selection was cancelled": "已取消選擇目錄",
 	"Disable Code Interpreter": "停用程式碼解譯器",
@@ -447,6 +453,7 @@
 	"Discover, download, and explore custom prompts": "發掘、下載及探索自訂提示詞",
 	"Discover, download, and explore custom tools": "發掘、下載及探索自訂工具",
 	"Discover, download, and explore model presets": "發掘、下載及探索模型預設集",
+	"Discussion channel where access is based on groups and permissions": "基於群組權限的討論頻道",
 	"Display": "顯示",
 	"Display chat title in tab": "在瀏覽器分頁標籤上顯示對話標題",
 	"Display Emoji in Call": "在通話中顯示表情符號",
@@ -485,12 +492,15 @@
 	"e.g. \"json\" or a JSON schema": "範例：\"json\" 或一個 JSON schema",
 	"e.g. 60": "例如：60",
 	"e.g. A filter to remove profanity from text": "例如：用來移除不雅詞彙的過濾器",
+	"e.g. about the Roman Empire": "例如：關於羅馬帝國的事蹟",
 	"e.g. en": "例如：en",
 	"e.g. My Filter": "例如：我的篩選器",
 	"e.g. My Tools": "例如：我的工具",
 	"e.g. my_filter": "例如：my_filter",
 	"e.g. my_tools": "例如：my_tools",
 	"e.g. pdf, docx, txt": "例如：pdf, docx, txt",
+	"e.g. Tell me a fun fact": "例如：告訴我一個趣聞",
+	"e.g. Tell me a fun fact about the Roman Empire": "例如：告訴我一個關於羅馬帝國的趣聞",
 	"e.g. Tools for performing various operations": "例如：用於執行各種操作的工具",
 	"e.g., 3, 4, 5 (leave blank for default)": "例如：3、4、5（留空使用預設值）",
 	"e.g., audio/wav,audio/mpeg,video/* (leave blank for defaults)": "例如：audio/wav,audio/mpeg,video/*（留空使用預設值）",
@@ -689,7 +699,6 @@
 	"Export Config to JSON File": "將設定匯出為 JSON 檔案",
 	"Export Models": "匯出模型",
 	"Export Presets": "匯出預設集",
-	"Export Prompt Suggestions": "匯出提示建議",
 	"Export Prompts": "匯出提示詞",
 	"Export to CSV": "匯出為 CSV",
 	"Export Tools": "匯出工具",
@@ -704,6 +713,7 @@
 	"External Web Search URL": "外部網路搜尋 URL",
 	"Fade Effect for Streaming Text": "串流文字淡入效果",
 	"Failed to add file.": "新增檔案失敗。",
+	"Failed to add members": "新增成員失敗",
 	"Failed to connect to {{URL}} OpenAPI tool server": "無法連線至 {{URL}} OpenAPI 工具伺服器",
 	"Failed to copy link": "複製連結失敗",
 	"Failed to create API Key.": "建立 API 金鑰失敗。",
@@ -717,6 +727,7 @@
 	"Failed to load file content.": "載入檔案內容失敗。",
 	"Failed to move chat": "移動對話失敗",
 	"Failed to read clipboard contents": "讀取剪貼簿內容失敗",
+	"Failed to remove member": "移除成員失敗",
 	"Failed to render diagram": "繪製圖表失敗",
 	"Failed to render visualization": "繪製圖表失敗",
 	"Failed to save connections": "儲存連線失敗",
@@ -816,11 +827,13 @@
 	"Google PSE Engine Id": "Google PSE 引擎 ID",
 	"Gravatar": "Gravatar 大頭貼",
 	"Group": "群組",
+	"Group Channel": "群組頻道",
 	"Group created successfully": "成功建立群組",
 	"Group deleted successfully": "成功刪除群組",
 	"Group Description": "群組描述",
 	"Group Name": "群組名稱",
 	"Group updated successfully": "成功更新群組",
+	"groups": "群組",
 	"Groups": "群組",
 	"H1": "一級標題",
 	"H2": "二級標題",
@@ -875,7 +888,6 @@
 	"Import Models": "匯入模型",
 	"Import Notes": "匯入筆記",
 	"Import Presets": "匯入預設集",
-	"Import Prompt Suggestions": "匯入提示建議",
 	"Import Prompts": "匯入提示詞",
 	"Import successful": "匯入成功",
 	"Import Tools": "匯入工具",
@@ -1011,6 +1023,9 @@
 	"MCP": "MCP",
 	"MCP support is experimental and its specification changes often, which can lead to incompatibilities. OpenAPI specification support is directly maintained by the Open WebUI team, making it the more reliable option for compatibility.": "MCP 支援為實驗性功能，其規範經常變更，可能導致不相容問題。OpenAPI 規範支援直接由 Open WebUI 團隊維護，是相容性更可靠的選擇。",
 	"Medium": "中",
+	"Member removed successfully": "成功移除成員",
+	"Members": "成員",
+	"Members added successfully": "成功新增成員",
 	"Memories accessible by LLMs will be shown here.": "可被大型語言模型存取的記憶將顯示在此。",
 	"Memory": "記憶",
 	"Memory added successfully": "成功新增記憶",
@@ -1110,6 +1125,7 @@
 	"No models selected": "未選取模型",
 	"No Notes": "尚無筆記",
 	"No notes found": "沒有任何筆記",
+	"No pinned messages": "沒有置頂訊息",
 	"No prompts found": "未找到提示詞",
 	"No results": "沒有結果",
 	"No results found": "未找到任何結果",
@@ -1157,6 +1173,7 @@
 	"Only alphanumeric characters and hyphens are allowed in the command string.": "命令字串中只允許使用英文字母、數字和連字號。",
 	"Only can be triggered when the chat input is in focus.": "僅在聚焦對話框時有效。",
 	"Only collections can be edited, create a new knowledge base to edit/add documents.": "只能編輯集合，請建立新的知識以編輯或新增檔案。",
+	"Only invited users can access": "只有受邀使用者可以存取",
 	"Only markdown files are allowed": "僅允許 Markdown 檔案",
 	"Only select users and groups with permission can access": "只有具有權限的選定使用者和群組可以存取",
 	"Oops! Looks like the URL is invalid. Please double-check and try again.": "哎呀！這個 URL 似乎無效。請仔細檢查並再試一次。",
@@ -1219,6 +1236,7 @@
 	"Personalization": "個人化",
 	"Pin": "釘選",
 	"Pinned": "已釘選",
+	"Pinned Messages": "置頂訊息",
 	"Pioneer insights": "先驅見解",
 	"Pipe": "Pipe",
 	"Pipeline deleted successfully": "成功刪除管線",
@@ -1248,7 +1266,7 @@
 	"Please select a model.": "請選擇一個模型。",
 	"Please select a reason": "請選擇原因",
 	"Please select a valid JSON file": "請選擇合法的 JSON 檔案",
-	"Please select at least one user for Direct Message channel.": "",
+	"Please select at least one user for Direct Message channel.": "請至少選擇一位使用者以建立直接訊息頻道。",
 	"Please wait until all files are uploaded.": "請等待所有檔案上傳完畢。",
 	"Port": "連接埠",
 	"Positive attitude": "積極的態度",
@@ -1261,9 +1279,9 @@
 	"Previous 7 days": "過去 7 天",
 	"Previous message": "過去訊息",
 	"Private": "私有",
+	"Private conversation between selected users": "選定使用者之間的私人對話",
 	"Profile": "個人檔案",
 	"Prompt": "提示詞",
-	"Prompt (e.g. Tell me a fun fact about the Roman Empire)": "提示詞（例如：告訴我關於羅馬帝國的一些趣事）",
 	"Prompt Autocompletion": "提示詞自動完成",
 	"Prompt Content": "提示詞內容",
 	"Prompt created successfully": "成功建立提示詞",
@@ -1515,7 +1533,7 @@
 	"STT Model": "語音轉文字 (STT) 模型",
 	"STT Settings": "語音轉文字 (STT) 設定",
 	"Stylized PDF Export": "風格化 PDF 匯出",
-	"Subtitle (e.g. about the Roman Empire)": "副標題（例如：關於羅馬帝國）",
+	"Subtitle": "副標題",
 	"Success": "成功",
 	"Successfully imported {{userCount}} users.": "成功匯入 {{userCount}} 個使用者",
 	"Successfully updated.": "更新成功。",
@@ -1598,7 +1616,6 @@
 	"Tika Server URL required.": "需要提供 Tika 伺服器 URL。",
 	"Tiktoken": "Tiktoken",
 	"Title": "標題",
-	"Title (e.g. Tell me a fun fact)": "標題（例如：告訴我一個有趣的事實）",
 	"Title Auto-Generation": "自動產生標題",
 	"Title cannot be an empty string.": "標題不能是空字串。",
 	"Title Generation": "產生標題",
@@ -1700,7 +1717,7 @@
 	"User menu": "使用者選單",
 	"User Webhooks": "使用者 Webhooks",
 	"Username": "使用者名稱",
-	"users": "",
+	"users": "使用者",
 	"Users": "使用者",
 	"Uses DefaultAzureCredential to authenticate": "使用 DefaultAzureCredential 進行身份驗證",
 	"Uses OAuth 2.1 Dynamic Client Registration": "使用 OAuth 2.1 動態用戶端登錄",
@@ -1720,6 +1737,7 @@
 	"View Replies": "檢視回覆",
 	"View Result from **{{NAME}}**": "檢視來自 **{{NAME}}** 的結果",
 	"Visibility": "可見度",
+	"Visible to all users": "對所有使用者可見",
 	"Vision": "視覺",
 	"Voice": "語音",
 	"Voice Input": "語音輸入",
