--- a/src/lib/i18n/locales/en-GB/translation.json
+++ b/src/lib/i18n/locales/en-GB/translation.json
@@ -462,6 +462,7 @@
 	"Docling Server URL required.": "",
 	"Document": "",
 	"Document Intelligence": "",
+	"Document Intelligence Model": "",
 	"Document Intelligence endpoint required.": "",
 	"Documentation": "",
 	"Documents": "",
@@ -564,6 +565,7 @@
 	"Enter Docling Server URL": "",
 	"Enter Document Intelligence Endpoint": "",
 	"Enter Document Intelligence Key": "",
+	"Enter Document Intelligence Model": "",
 	"Enter domains separated by commas (e.g., example.com,site.org,!excludedsite.com)": "",
 	"Enter Exa API Key": "",
 	"Enter External Document Loader API Key": "",
