--- a/src/lib/i18n/locales/zh-TW/translation.json
+++ b/src/lib/i18n/locales/zh-TW/translation.json
@@ -257,6 +257,7 @@
 	"Citations": "引用",
 	"Clear memory": "清除記憶",
 	"Clear Memory": "清除記憶",
+	"Clear status": "",
 	"click here": "點選此處",
 	"Click here for filter guides.": "點選此處檢視篩選器指南。",
 	"Click here for help.": "點選此處取得協助。",
@@ -470,6 +471,7 @@
 	"Document": "檔案",
 	"Document Intelligence": "Document Intelligence",
 	"Document Intelligence endpoint required.": "需要提供 Document Intelligence 端點。",
+	"Document Intelligence Model": "",
 	"Documentation": "說明檔案",
 	"Documents": "檔案",
 	"does not make any external connections, and your data stays securely on your locally hosted server.": "不會建立任何外部連線，而且您的資料會安全地儲存在您本機伺服器上。",
@@ -574,6 +576,7 @@
 	"Enter Docling Server URL": "請輸入 Docling 伺服器 URL",
 	"Enter Document Intelligence Endpoint": "輸入 Document Intelligence 端點",
 	"Enter Document Intelligence Key": "輸入 Document Intelligence 金鑰",
+	"Enter Document Intelligence Model": "",
 	"Enter domains separated by commas (e.g., example.com,site.org,!excludedsite.com)": "輸入網域，以逗號分隔（例如：example.com,site.org,!excludedsite.com）",
 	"Enter Exa API Key": "輸入 Exa API 金鑰",
 	"Enter External Document Loader API Key": "請輸入外部文件載入器 API 金鑰",
@@ -714,6 +717,7 @@
 	"Fade Effect for Streaming Text": "串流文字淡入效果",
 	"Failed to add file.": "新增檔案失敗。",
 	"Failed to add members": "新增成員失敗",
+	"Failed to clear status": "",
 	"Failed to connect to {{URL}} OpenAPI tool server": "無法連線至 {{URL}} OpenAPI 工具伺服器",
 	"Failed to copy link": "複製連結失敗",
 	"Failed to create API Key.": "建立 API 金鑰失敗。",
@@ -734,6 +738,7 @@
 	"Failed to save conversation": "儲存對話失敗",
 	"Failed to save models configuration": "儲存模型設定失敗",
 	"Failed to update settings": "更新設定失敗",
+	"Failed to update status": "",
 	"Failed to upload file.": "上傳檔案失敗。",
 	"Features": "功能",
 	"Features Permissions": "功能權限",
@@ -1466,6 +1471,7 @@
 	"Set the number of worker threads used for computation. This option controls how many threads are used to process incoming requests concurrently. Increasing this value can improve performance under high concurrency workloads but may also consume more CPU resources.": "設定用於計算的工作執行緒數量。此選項控制使用多少執行緒來同時處理傳入的請求。增加此值可以在高併發工作負載下提升效能，但也可能消耗更多 CPU 資源。",
 	"Set Voice": "設定語音",
 	"Set whisper model": "設定 whisper 模型",
+	"Set your status": "",
 	"Sets a flat bias against tokens that have appeared at least once. A higher value (e.g., 1.5) will penalize repetitions more strongly, while a lower value (e.g., 0.9) will be more lenient. At 0, it is disabled.": "對至少出現過一次的 token 設定統一的偏差值。較高的值（例如：1.5）會更強烈地懲罰重複，而較低的值（例如：0.9）會更寬容。設為 0 時，此功能將停用。",
 	"Sets a scaling bias against tokens to penalize repetitions, based on how many times they have appeared. A higher value (e.g., 1.5) will penalize repetitions more strongly, while a lower value (e.g., 0.9) will be more lenient. At 0, it is disabled.": "根據 token 出現的次數，設定一個縮放偏差值來懲罰重複。較高的值（例如：1.5）會更強烈地懲罰重複，而較低的值（例如：0.9）會更寬容。設為 0 時，此功能將停用。",
 	"Sets how far back for the model to look back to prevent repetition.": "設定模型要回溯多遠來防止重複。",
@@ -1518,6 +1524,9 @@
 	"Start a new conversation": "開始新對話",
 	"Start of the channel": "頻道起點",
 	"Start Tag": "起始標籤",
+	"Status": "",
+	"Status cleared successfully": "",
+	"Status updated successfully": "",
 	"Status Updates": "顯示實時回答狀態",
 	"STDOUT/STDERR": "STDOUT/STDERR",
 	"Steps": "迭代步數",
@@ -1684,6 +1693,7 @@
 	"Update and Copy Link": "更新並複製連結",
 	"Update for the latest features and improvements.": "更新以獲得最新功能和改進。",
 	"Update password": "更新密碼",
+	"Update your status": "",
 	"Updated": "已更新",
 	"Updated at": "更新於",
 	"Updated At": "更新於",
@@ -1765,6 +1775,7 @@
 	"What are you trying to achieve?": "您正在試圖完成什麼？",
 	"What are you working on?": "您現在的工作是什麼？",
 	"What's New in": "新功能",
+	"What's on your mind?": "",
 	"When enabled, the model will respond to each chat message in real-time, generating a response as soon as the user sends a message. This mode is useful for live chat applications, but may impact performance on slower hardware.": "啟用時，模型將即時回應每個對話訊息，在使用者傳送訊息後立即生成回應。此模式適用於即時對話應用程式，但在較慢的硬體上可能會影響效能。",
 	"wherever you are": "無論您在何處",
 	"Whether to paginate the output. Each page will be separated by a horizontal rule and page number. Defaults to False.": "是否啟用輸出分頁功能，每頁會以水平線與頁碼分隔。預設為 False。",
